fixed alignment of nav and image in header

--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -88,7 +88,7 @@ li {
 
 
 .firstRow {
-    width: 95%;
+    width: 99%;
     display: flex;
 }
 
@@ -106,7 +106,8 @@ li {
 }
 
 .firstRowPicture {
-    width: 100%;
+    margin-bottom: auto;
+    margin-top: auto;
 
 
 
